build searching API